RESOLVED FIXED59036
Reproducible crash under WebPageProxy::didReceiveEvent
https://bugs.webkit.org/show_bug.cgi?id=59036
Summary Reproducible crash under WebPageProxy::didReceiveEvent
Maciej Stachowiak
Reported 2011-04-20 16:28:53 PDT
Reproducible crash under WebPageProxy::didReceiveEvent
Attachments
Patch (2.04 KB, patch)
2011-04-20 16:38 PDT, Maciej Stachowiak
sam: review+
Maciej Stachowiak
Comment 1 2011-04-20 16:38:32 PDT
Maciej Stachowiak
Comment 2 2011-04-20 16:42:02 PDT
Alexey Proskuryakov
Comment 3 2011-04-20 22:51:58 PDT
Comment on attachment 90442 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=90442&action=review > Source/WebKit2/UIProcess/API/mac/WKView.mm:1990 > + // resending the event may destroy this WKView Comments should be full sentences with a capital letter and a period.
Note You need to log in before you can comment on or make changes to this bug.